[package]
name = "rust-gql"
version = "0.1.0"
authors = ["ikeikeikeike <jp.ne.co.jp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3.3.2"
actix-cors = "^0.5.3"

juniper = "^0.14"
# juniper = "^0.15.1"
# juniper_codegen = "^0.15.1"
# juniper-from-schema = "^0.5.2"
# juniper-from-schema = { git = "https://github.com/davidpdrsn/juniper-from-schema" }
# juniper-from-schema-code-gen = "^0.5.2"
# juniper-eager-loading = "^0.5.1"
# juniper-eager-loading-code-gen = "^0.5.1"

dotenv = "^0.15.0"
env_logger = "^0.8.2"
log = "^0.4.11"

serde = "^1.0.118"
serde_json = "^1.0.60"
serde_derive = "^1.0.118"

uuid = { version = "0.8", features = ["serde", "v4"] }

# diesel = { version = "^1.4.5", features = ["mysql", "r2d2", "chrono", "numeric"] }
# diesel_cli = { version = "^1.4.1", features = ["mysql"] }
mysql = "^20.1.0"
r2d2 = "^0.8.9"
r2d2_mysql = "^18.0.0"

anyhow = "^1.0.35"
either = "^1.6.1"
failure = "^0.1.8"
fallible-iterator = "^0.2.0"
futures = "^0.3.8"
itertools = "^0.9.0"
itertools-num = "^0.1.3"
thiserror = "^1.0.22"
